# rustodium

./: Cargo.toml
src/: config.rs  lib.rs  main.rs
src/commands/: ping.rs
